--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="loginBtn" class="login-btn">Login</button>
         <button id="logoutBtn" class="logout-btn-small" style="display:none;">Logout</button>
         <h1>🔍 Smart Lost & Found System</h1>
-        <p>City-wise intelligent matching</p>
+        <p>particular for IIIT Manipur</p>
     </header>
     <div class="cta-bar">
         <div class="cta-content">
@@ -58,5 +58,6 @@
     </div>
     <script type="module" src="app.js"></script>
 </body>
+
 
 </html>
